--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,16 @@
       <artifactId>logging-interceptor</artifactId>
       <version>3.9.1</version>
     </dependency>
+    <dependency>
+      <groupId>jakarta.json</groupId>
+      <artifactId>jakarta.json-api</artifactId>
+      <version>1.1.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>jakarta.json</artifactId>
+      <version>1.1.5</version>
+    </dependency>
   </dependencies>
 
   <build>
